--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "yarn serve",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
     "build": "tsc",
-    "serve": "node -r build/src/server.js",
+    "serve": "node -r dotenv/config build/src/server.js",
     "test": "jest --coverage"
   },
   "dependencies": {
