--- a/package.json
+++ b/package.json
@@ -6,24 +6,33 @@
   "license": "MIT",
   "scripts": {
     "start": "yarn serve",
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev": "concurrently \" yarn dev:server\" \" yarn dev:queue\"",
+    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev:queue": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/queue.ts",
     "build": "tsc",
     "serve": "node -r dotenv/config build/src/server.js",
     "test": "jest --coverage"
   },
   "dependencies": {
+    "@bull-board/express": "^3.10.7",
+    "bull": "^4.8.2",
+    "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-status-monitor": "^1.3.4",
-    "morgan": "^1.10.0"
+    "monitoro": "^0.1.6",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.7.3"
   },
   "devDependencies": {
+    "@types/bull": "^3.15.8",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-status-monitor": "^1.2.4",
     "@types/jest": "^27.4.1",
     "@types/morgan": "^1.9.3",
+    "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
