--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "@bull-board/api": "^3.10.7",
     "@bull-board/express": "^3.10.7",
-    "bull": "^4.8.2",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-status-monitor": "^1.3.4",
-    "monitoro": "^0.1.6",
+    "ioredis": "^5.0.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.3"
   },
@@ -37,6 +37,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
+    "bullmq": "^1.80.6",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^27.5.1",
