--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-status-monitor": "^1.3.4",
     "ioredis": "^5.0.4",
     "morgan": "^1.10.0",
+    "mssql": "^8.1.0",
     "nodemailer": "^6.7.3"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/express-status-monitor": "^1.2.4",
     "@types/jest": "^27.4.1",
     "@types/morgan": "^1.9.3",
+    "@types/mssql": "^7.1.5",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
