--- a/package.json
+++ b/package.json
@@ -15,17 +15,24 @@
     "test": "jest --coverage"
   },
   "dependencies": {
-    "@bull-board/api": "^3.10.7",
-    "@bull-board/express": "^3.10.7",
+    "@bull-board/api": "^3.11.0",
+    "@bull-board/express": "^3.11.0",
+    "@tensorflow-models/blazeface": "^0.0.7",
+    "@tensorflow/tfjs-backend-webgl": "^3.17.0",
+    "@tensorflow/tfjs-converter": "^3.17.0",
+    "@tensorflow/tfjs-core": "^3.17.0",
     "bullmq": "^1.81.0",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "dropbox": "^10.29.0",
     "express": "^4.17.3",
     "express-status-monitor": "^1.3.4",
+    "googleapis": "39",
     "ioredis": "^5.0.4",
     "morgan": "^1.10.0",
     "mssql": "^8.1.0",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.3"
   },
   "devDependencies": {
@@ -35,6 +42,7 @@
     "@types/jest": "^27.4.1",
     "@types/morgan": "^1.9.3",
     "@types/mssql": "^7.1.5",
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
