--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "esnext",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "module": "commonjs",                                /* Specify what module code is generated. */
     "moduleResolution": "node",
-    "rootDir": ".",                                  /* Specify the root folder within your source files. */
-    "baseUrl": ".",                                  /* Specify the base directory to resolve non-relative module names. */
+    "rootDir": "./",                                  /* Specify the root folder within your source files. */
+    "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
       "@/*": [
         "src/*"
